// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconChatRound should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-chat-round "
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    className="fill-color"
    d="M14 3h-4a8 8 0 0 0-5 14.26V21a1 1 0 0 0 .08.37 1 1 0 0 0 1.31.53L12 19h2a8 8 0 0 0 0-16zm-6 9a1 1 0 1 1 1-1 1 1 0 0 1-1 1zm4 0a1 1 0 1 1 1-1 1 1 0 0 1-1 1zm4 0a1 1 0 1 1 1-1 1 1 0 0 1-1 1z"
    fill="#999"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconChatRound should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="icon-chat-round test"
  height={100}
  title="title"
  viewBox="0 0 24 24"
  width={200}
>
  <path
    className="fill-color"
    d="M14 3h-4a8 8 0 0 0-5 14.26V21a1 1 0 0 0 .08.37 1 1 0 0 0 1.31.53L12 19h2a8 8 0 0 0 0-16zm-6 9a1 1 0 1 1 1-1 1 1 0 0 1-1 1zm4 0a1 1 0 1 1 1-1 1 1 0 0 1-1 1zm4 0a1 1 0 1 1 1-1 1 1 0 0 1-1 1z"
    fill="#999"
  />
</AccessibleSVG>
`;
